--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -185,7 +185,7 @@ font-family: myFirstFont;
 
 	  </ul>
 	  <div class="center">
-		<a href="linkone.html" class="previous">&laquo; Previous</a>
+		<a href="#" class="previous">&laquo; Previous</a>
 		<a href="#" class="next">Next &raquo;</a>
 	  </div>
 	</div>
