--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -156,7 +156,7 @@ font-family: myFirstFont;
 
 	<div class="content">
 	  <ul id="myUL">
-		<li><a href="#">Comming ...</a></li>
+		<li><a href="https://phatkyamal.blogspot.com/feeds/posts/default/-/%E1%80%90%E1%80%AC%E2%80%8B%E1%80%90%E1%80%B1?alt=json "> တာတေ </a></li>
 		<li><a href="#">Comming ...</a></li>
 
 		<li><a href="#">Comming ...</a></li>
