--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -159,7 +159,7 @@ font-family: myFirstFont;
 		<li><a href="https://phatkyamal.blogspot.com/feeds/posts/default/-/%E1%80%90%E1%80%AC%E2%80%8B%E1%80%90%E1%80%B1?alt=json "> တာတေ </a></li>
 		<li><a href="https://phatkyamal.blogspot.com/feeds/posts/default/-/%E2%80%8B%E1%80%A1%E1%80%B1%E1%80%AC%E1%80%84%E1%80%BA%E1%80%99%E1%80%BC%E1%80%90%E1%80%BA%E1%80%9E%E1%80%AC?alt=json "> အောင်မြတ်သာ </a></li>
 
-		<li><a href="#">Comming ...</a></li>
+		<li><a href="https://phatkyamal.blogspot.com/feeds/posts/default/-/%E1%80%99%E1%80%BC%E1%80%B0%E1%80%81%E1%80%AD%E1%80%AF%E1%80%B8%E1%80%A1%E1%80%9C%E1%80%84%E1%80%BA%E1%80%B9%E1%80%80%E1%80%AC?alt=json "> မြူခိုးအလင်္ကာ </a></li>
 		<li><a href="#">Comming ...</a></li>
 
 		<li><a href="#">Comming ...</a></li>
