--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -160,10 +160,10 @@ font-family: myFirstFont;
 		<li><a href="https://phatkyamal.blogspot.com/feeds/posts/default/-/%E2%80%8B%E1%80%A1%E1%80%B1%E1%80%AC%E1%80%84%E1%80%BA%E1%80%99%E1%80%BC%E1%80%90%E1%80%BA%E1%80%9E%E1%80%AC?alt=json "> အောင်မြတ်သာ </a></li>
 
 		<li><a href="https://phatkyamal.blogspot.com/feeds/posts/default/-/%E1%80%99%E1%80%BC%E1%80%B0%E1%80%81%E1%80%AD%E1%80%AF%E1%80%B8%E1%80%A1%E1%80%9C%E1%80%84%E1%80%BA%E1%80%B9%E1%80%80%E1%80%AC?alt=json "> မြူခိုးအလင်္ကာ </a></li>
-		<li><a href="#">Comming ...</a></li>
+		<li><a href="https://phatkyamal.blogspot.com/feeds/posts/default/-/%E1%80%95%E1%80%AE%E1%80%95%E1%80%AE?alt=json "> ပီပီ (မန္တလေး) </a></li>
 
-		<li><a href="#">Comming ...</a></li>
-		<li><a href="#">Comming ...</a></li>
+		<li><a href="https://phatkyamal.blogspot.com/feeds/posts/default/-/ZYMP%28%E1%80%9E%E1%80%AF%E1%80%B6%E1%80%B8%E1%80%86%E1%80%9A%E1%80%BA%E2%80%8B%E1%80%99%E1%80%BC%E1%80%B1%29?alt=json "> Z.Y.M.P (သုံးဆယ်မြေ) </a></li>
+		<li><a href="https://phatkyamal.blogspot.com/feeds/posts/default/-/%E1%80%9E%E1%80%9B%E1%80%B2%E1%80%90%E2%80%8B%E2%80%8B%E1%80%85%E1%80%B9%E1%80%86%E1%80%B1%E1%80%87%E1%80%AC%E1%80%90%E1%80%BA%E1%80%9C%E1%80%99%E1%80%BA%E1%80%B8%E1%80%90%E1%80%AD%E1%80%AF?alt=json "> ပရေလာကဇာတ်လမ်းတိုများ </a></li>
 
 		<li><a href="#">Comming ...</a></li>
 		<li><a href="#">Comming ...</a></li>
