--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -185,9 +185,8 @@ font-family: myFirstFont;
 
 	  </ul>
 	  <div class="center">
-		<a href="#" class="previous">&laquo; Previous</a>
-		<a href="#" class="next">Next &raquo;</a>
-	  </div>
+		<marquee bgcolor="#d9d9ff" hspace="50" vspace="20"><font size ="7">Background and Space</font></marquee>
+		</div>
 	</div>
 <script>
 	
