--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -140,6 +140,12 @@ div {
 p{
 font-family: myFirstFont;
 }
+.marquee {
+        width: 100%;
+        padding: 10px 0;
+        background-color: lightwhite;
+	color: blue;
+      }
 </style>
   </head>
   <body>
@@ -185,8 +191,8 @@ font-family: myFirstFont;
 
 	  </ul>
 	  <div class="center">
-		<marquee bgcolor="#d9d9ff" hspace="100" vspace="100"><font size ="5">Background and Space</font></marquee>
-		</div>
+		<marquee direction="scroll"><font size="7">💓 Welcom to my blogger 💓 </font></marquee>
+	</div>
 	</div>
 <script>
 	
