--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -143,8 +143,7 @@ font-family: myFirstFont;
 .marquee {
         width: 100%;
         padding: 10px 0;
-        background-color: lightwhite;
-	color: blue;
+        background-color: #FF4B9BF1;
       }
 </style>
   </head>
