--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -190,7 +190,7 @@ font-family: myFirstFont;
 
 	  </ul>
 	  <div class="center">
-		<marquee direction="scroll"><font size="7">💓 Welcom to my blogger 💓 </font></marquee>
+		<marquee direction="scroll" bgcolor="#FF4B9BF1" ><font size="5">💓 Welcom to my blogger 💓 </font></marquee>
 	</div>
 	</div>
 <script>
