--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -141,7 +141,7 @@ p{
 font-family: myFirstFont;
 }
 #marquee {
-    font-size: 30pt;
+    font-size: 25pt;
     font-weight: bold;
     font-family: myFirstFont;	
 }
@@ -190,7 +190,7 @@ font-family: myFirstFont;
 
 	  </ul>
 	  <div class="center">
-		  <marquee id="marquee">Text Color Changes</marquee>
+		  <marquee id="marquee"> 📖 ပရေလာက, စုန်း, ကဝေ, ဂန္ဘီရ, ဖြစ်ရပ်မှန် 📖</marquee>
 		  
 	</div>
 	</div>
