--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -182,15 +182,9 @@ font-family: myFirstFont;
 		<li><a href="#">Comming ...</a></li>
 		<li><a href="#">Comming ...</a></li>
 
-		<li><a href="#">Comming ...</a></li>
-		<li><a href="#">Comming ...</a></li>
-
-		<li><a href="#">Comming ...</a></li>
-		<li><a href="#">Comming ...</a></li>
-
 	  </ul>
 	  <div class="center">
-		  <marquee id="marquee"> 📖 ပရေလာက, စုန်း, ကဝေ, ဂန္ဘီရ, ဖြစ်ရပ်မှန် 📖</marquee>
+		  <marquee id="marquee"> 📖 ပရေလာက၊ စုန်း၊ ကဝေ၊ ဂန္ဘီရ၊ ဖြစ်ရပ်မှန် 📖 </marquee>
 		  
 	</div>
 	</div>
