--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -151,7 +151,7 @@ font-family: myFirstFont;
 	
 	<div class="header">
 	  <p class="center" class="thick"><b>PHAT KYA MAL </b></p>
-	  <p class="center">ပရ​​လောက၊ ဂန္ဘီရ၊ ဖြစ်ရပ်မှန်</p>
+	  <p class="center">ပရလောက၊ စုန်း၊ ကဝေ၊ ဂန္ဘီရ၊ ဖြစ်ရပ်မှန်</p>
 	</div>
 	<div id="navbar" >
 
@@ -184,7 +184,7 @@ font-family: myFirstFont;
 
 	  </ul>
 	  <div class="center">
-		  <marquee id="marquee"> 📖 ပရေလာက၊ စုန်း၊ ကဝေ၊ ဂန္ဘီရ၊ ဖြစ်ရပ်မှန် 📖 </marquee>
+	<marquee id="marquee"> 📖 ပရေလာက၊ စုန်း၊ ကဝေ၊ ဂန္ဘီရ၊ ဖြစ်ရပ်မှန် 📖 </marquee>
 		  
 	</div>
 	</div>
