--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -66,7 +66,7 @@ body {
   padding: 10px 20px 10px 40px; /* Add some padding */
   border: 1px solid #ddd; /* Add a grey border */
   margin-bottom: 2px; /* Add some space below the input */
-  
+  font-weight: bold;
  }
 #myUL {
   /* Remove default list styling */
@@ -96,6 +96,7 @@ p.thick {
 .center {
   text-align: center;
   color: White;
+  font-size: 25px;
 }
 .ex1 {
   margin-left: 20px;
@@ -141,7 +142,7 @@ p{
 font-family: myFirstFont;
 }
 #marquee {
-    font-size: 16pt;
+    font-size: 14pt;
     font-weight: bold;
     font-family: myFirstFont;	
 }
