--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -73,6 +73,7 @@ body {
   list-style-type: none;
   padding: 0;
   margin: 5px;
+  font-weight: bold;
 }
 #myUL li a {
   border: 2px solid #ddd; /* Add a border to all links */
