--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -19,7 +19,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 .header {
-  background-color: #6495ED;
+  background-color: #1E90FF;
   padding: 2px;
   text-align: center;
 }
@@ -27,7 +27,7 @@ body {
 /* Style the navbar */
 #navbar {
   overflow: hidden;
-  background-color: #6495ED;
+  background-color: #1E90FF;
   padding: 12px;
 }
 
