--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -84,6 +84,8 @@ body {
   font-size: 16px; /* Increase the font-size */
   color: blue; /* Add a black text color */
   display: block; /* Make it into a block element to fill the whole list */
+  box-shadow: 2px 3px 7px #888888;
+	
 }
 #myUL li a:hover:not(.header) {
   background-color: #87CEEB; /* Add a hover effect to all links, except for headers */
