--- a/phatkyamal.html
+++ b/phatkyamal.html
@@ -88,7 +88,7 @@ body {
 	
 }
 #myUL li a:hover:not(.header) {
-  background-color: #87CEEB; /* Add a hover effect to all links, except for headers */
+  background-color: #6495ED; /* Add a hover effect to all links, except for headers */
 }
 p {
   font-size: 20px;
